Bug 41225 - Tree builder doesn't need to return a Node
Summary: Tree builder doesn't need to return a Node
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-06-25 13:53 PDT by Adam Barth
Modified: 2010-06-25 16:32 PDT (History)
1 user (show)

See Also:


Attachments
Patch (16.03 KB, patch)
2010-06-25 13:54 PDT, Adam Barth
no flags Details | Formatted Diff | Diff
Patch for landing (16.05 KB, patch)
2010-06-25 14:03 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-06-25 13:53:18 PDT
Tree builder doesn't need to return a Node
Comment 1 Adam Barth 2010-06-25 13:54:43 PDT
Created attachment 59793 [details]
Patch
Comment 2 Darin Adler 2010-06-25 13:55:55 PDT
Comment on attachment 59793 [details]
Patch

> -    // Implementation coming in the next patch.
> -    return 0;

Should there be an ASSERT_NOT_REACHED here?
Comment 3 Adam Barth 2010-06-25 13:58:35 PDT
> Should there be an ASSERT_NOT_REACHED here?

Eventually there should be.  We'll hit that case until we implement all the states though.
Comment 4 Adam Barth 2010-06-25 13:59:09 PDT
Comment on attachment 59793 [details]
Patch

Thanks for the review.  :)
Comment 5 Adam Barth 2010-06-25 14:03:10 PDT
Created attachment 59794 [details]
Patch for landing
Comment 6 Adam Barth 2010-06-25 16:32:22 PDT
Comment on attachment 59794 [details]
Patch for landing

Clearing flags on attachment: 59794

Committed r61914: <http://trac.webkit.org/changeset/61914>
Comment 7 Adam Barth 2010-06-25 16:32:27 PDT
All reviewed patches have been landed.  Closing bug.